# helloworld

./: meson.build
services/: helloworld.service  meson.build
src/: helloworld.cpp  helloworld.hpp  meson.build  utils.cpp  utils.hpp
xyz/openbmc_project/Power/: PowerStatus.interface.yaml
xyz/openbmc_project/Power/PowerStatus/: meson.build
